tercera pre entrega

--- a/index.html
+++ b/index.html
@@ -4,148 +4,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>PetShop</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
 
-    <header>
+<div class="container">
+<header>
+    <h1 class="logo"> Aika PetShop</h1>
+</header>
+<nav>
+    <ul>
+       <li><button id="todos" class="boton-menu boton-categoria active">Todos los productos</button></li>
+       <li><button id="perros" class="boton-menu boton-categoria">Alimentos para perros</button></li>
+       <li><button id="gatos" class="boton-menu boton-categoria">Alimentos para gatos</button></li>
+       <li><a class="boton-menu boton-carrito" href="./carrito.html">Carrito <span class="numerito">0</span></a></li>
+    </ul>
+</nav>
 
-    </header>
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
 
     <main>
+        <h2 class="titulo-principal" id="titulo-principal">Alimentos para mascotas</h2>
+        <div id="contenedor-productos" class="contenedor-productos">
 
-        <div>
-            <img class="portada" src="../aika/309838225_482051053962423_2196430416878054423_n.jpg" alt="">
+        </div>
+    </main>
 
-        </div>
-<h2>Alimentos para perros</h2>
-    
-        <section class="card">
-            </article>
-            <div class="">
-                <img src="../aika/dogchow.webp" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Dog Chow</h5>
-                    <span>$</span>
-                    <p>20kg.</p>
-                    <span>stock</span>
-                    <form id="formulario">
-                        <label for="">Cantidad</label>
-                        <input type="number" placeholder="1" id="">
-                        <button class="btn-agregar" id="">Agregar</button>
-                    </form>
-                </div>
-            </div>
-            </article>
-            <div>
-                <img src="../aika/pedigree.webp" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Pedigree</h5>
-                    <span>$</span>
-                    <p>15kg.</p>
-                    <span>stock</span>
-                    <form id="formulario">
-                        <label for="">Cantidad</label>
-                        <input type="number" placeholder="1" id="">
-                        <button class="btn-agregar" id="">Agregar</button>
-                    </form>
-                </div>
-            </div>
-            </article>
-            <div>
-                <img src="../aika/tiernitos.webp" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Tiernitos</h5>
-                    <span>$</span>
-                    <p>15kg.</p>
-                    <span>stock</span>
-                    <form>
-                        <label for="">Cantidad</label>
-                        <input type="number" placeholder="1" id="">
-                        <button class="btn-agregar" id="botonAgregar">Agregar</button>
-                    </form>
-                </div>
-            </div>
-            </article>
-            <div>
-                <img src="../aika/mini.jpeg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Royal canin mini adulto</h5>
-                    <span>$</span>
-                    <p>7,5kg.</p>
-                    <span>stock</span>
-                    <form>
-                        <label for="">Cantidad</label>
-                        <input type="number" placeholder="1" id="">
-                        <button class="btn-agregar" id="">Agregar</button>
-                    </form>
-                </div>
-            </div>
-        </section> 
 
-<h2> Alimentos para gato </h2>
+<footer>
 
-        <section class="card">
-        </article>
-        <div class="">
-            <img src="../aika/whiscas2.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Whiscas</h5>
-                <span>$</span>
-                <p>7kg.</p>
-                <span>stock</span>
-                <form>
-                    <label for="">Cantidad</label>
-                    <input type="number" placeholder="1" id="">
-                    <button class="btn-agregar" id="">Agregar</button>
-                </form>
-            </div>
-        </div>
-        </article>
-        <div>
-            <img src="../aika/gati.webp" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Gati</h5>
-                <span>$</span>
-                <p>7kg.</p>
-                <span>stock</span>
-                <form>
-                    <label for="">Cantidad</label>
-                    <input type="number" placeholder="1" id="">
-                    <button class="btn.agregar" id="">Agregar</button>
-                </form>
-            </div>
-        </div>
-        </article>
-        <div>
-            <img src="../aika/catchowgatitos.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Cat Chow gatitos</h5>
-                <span>$</span>
-                <p>7kg.</p>
-                <span>stock</span>
-                <form>
-                    <label for="">Cantidad</label>
-                    <input type="number" placeholder="1" id="">
-                    <button class="btn-agregar" id="botonAgregar">Agregar</button>
-                </form>
-            </div>
-        </div>
-        </article>
-        <div>
-            <img src="../aika/raza.webp" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Raza gatos</h5>
-                <span>$</span>
-                <p>7,5kg.</p>
-                <span>stock</span>
-                <form>
-                    <label for="">Cantidad</label>
-                    <input type="number" placeholder="1" id="">
-                    <button class="btn-agregar" id="">Agregar</button>
-                </form>
-            </div>
-        </div>
-    </section>
+</footer>
+
+
+
+    <script src="/main.js"></script>
+</body>
+
+</html>
