--- a/index.html
+++ b/index.html
@@ -46,13 +46,12 @@
         <main>
             <h1 class="titulo-principal" id="titulo-principal">Todos los productos</h1>
             <div id="contenedor-productos" class="contenedor-productos">
-                <!-- Esto se va a rellenar con JS -->
+                <!-- va a ser creado en JS -->
             </div>
         </main>
     </div>
     
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="./js/main.js"></script>
-    <script src="./js/menu.js"></script>
 </body>
 </html>
