--- a/carrito.html
+++ b/carrito.html
@@ -42,7 +42,7 @@
                 <p id="carrito-vacio" class="carrito-vacio">Tu carrito está vacío.</p>
 
                 <div id="carrito-productos" class="carrito-productos disabled">
-                    <!-- Esto se va a completar con el JS -->
+                    <!-- va a ser creado en js -->
                 </div>
 
                 <div id="carrito-acciones" class="carrito-acciones disabled">
@@ -67,6 +67,5 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/carrito.js"></script>
-    <script src="./js/menu.js"></script>
 </body>
 </html>
